[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Valera.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/Valera32.tres" type="DynamicFont" id=2]
[ext_resource path="res://scripts/TextEnterDialog.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 1 )

[node name="TextEnterDialog" type="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.0
margin_top = -148.0
margin_right = 239.0
margin_bottom = 148.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
cancel_option = true

[node name="DialogTitle" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -142.0
margin_top = 25.0
margin_right = 142.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Enter Lobby Code"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Input" type="LineEdit" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 25.0
margin_top = -50.0
margin_right = -25.0
custom_fonts/font = ExtResource( 2 )
max_length = 4
placeholder_text = "Lobby Code"
placeholder_alpha = 0.4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.5
margin_top = 20.0
margin_right = 148.5
margin_bottom = 40.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.462745, 0.462745, 1 )
text = "Please enter a 4 digit number"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -239.0
margin_top = -80.0
margin_right = 239.0
margin_bottom = -25.0
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 214.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 0 )
custom_fonts/font = ExtResource( 2 )
text = "Back"

[node name="Confirm" type="Button" parent="HBoxContainer"]
margin_left = 264.0
margin_right = 414.0
margin_bottom = 55.0
rect_min_size = Vector2( 150, 45 )
custom_fonts/font = ExtResource( 2 )
text = "Confirm"
[connection signal="pressed" from="HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="HBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
